[package]
name = "bonsai"
version = "0.2.0"
authors = ["Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Index arithmetic functions for perfect binary trees."
repository = "https://github.com/lightclient/bonsai"
keywords = ["perfect-binary-tree", "general-index"]
categories = ["no-std"]

[dependencies]

[features]
default = ["u64"]
u64 = []
u128 = []
